Update the data.cb and data.app endpoints to return same schema (#111)
* Make app.merge return undefined and cb db save createdBy and updatedBy
* Update cb.query endpoint to return same schema as app.data
* Update data.cb.get endpoint to return object metadata
* Update latest code coverage amounts
* Update swagger doc generic response schema since cb matches app
